# BSUIR-POIT

./: README.md
Docs/6 sem/: A1.drawio
Docs/6 sem/MPP/: tasks.docx  многопоточка
Docs/6 sem/OM/: Book1.xlsx  lab2-old.xlsx  lab2.docx  lab2.ggb  lab2.xlsx  lab3.docx  lab4.docx  om-lab3 autosaved old.xlsx  om-lab3.xlsx  om-lab4.xlsx  ~$om-lab4.xlsx
Docs/6 sem/OSaSP/: ОСиСП ч.2 ЛР.docx  вопросы
Docs/6 sem/stiaos/: pl1.docx
Docs/6 sem/tmp/: OM_01.xlsx
Docs/6 sem/БД/: ~$БД-1.docx  ~$БД.docx
Docs/6 sem/НПО/: Вопросы НПО 19_20.docx
Docs/6 sem/СПП/: СПП.2021-12-15.pptx
Docs/6 sem/СТиАОС/: individual - before access-lists.pkt  individual - before gre.pkt  individual.pkt  lab1.pkt  lab3.pkt  lab4-new.pkt  lab4.pkt  practical4 - Copy.pkt  practical4.pkt
Docs/6 sem/ТИ/: IT.rar  arch.tar.xz  lab3.odt
Docs/6 sem/Твоп/: Lab4.docx  lab1.docx  lab2.docx  lab3.docx  Лабораторная работа 3(1).docx
Docs/6 sem/Экономика/: Альбом синицы.doc
Docs/6 sem/миапр/: _03.rar
Docs/7 sem/tmp/: _01.docx  _02.docx  _03.docx  _04.docx  _05.docx  _06.docx
Docs/7 sem/БД/: lab2.sql  lab5.sql  lab6.sql  lab7.sql
Docs/7 sem/ПОВС/: lab4.docx  Лабораторная работа 3 2023.docx
Docs/7 sem/САиММод/: .$var25.drawio.bkp  .$var25.drawio.dtmp  lab4.sage  var25.drawio
Docs/7 sem/ЦОС/: task.txt
Docs/8 sem/ерп/: .$lab4.drawio.bkp  Terminy_OerpC.docx  lab4.drawio  lab56 В15.xlsx  ЛР23.xlsx  ХрюRP.xlsx
Docs/8 sem/пирис/: доклад.md
Laboratory works/3 sem/ЯП/l11/anotherGtkTest/: CMakeLists.txt  main.c
Laboratory works/3 sem/ЯП/l11/drawing/: CMakeLists.txt  main.c
(+1719 files in other folders)
